// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterBadge should render correctly 1`] = `
<div>
  <div
    class="StatusBadge StatusBadge--context_info StatusBadge--variant_bold CounterBadge"
    title="200k"
  >
    <span
      class="StatusBadge__text"
    >
      200k
    </span>
  </div>
</div>
`;

exports[`CounterBadge should render with downward icon 1`] = `
<div>
  <div
    class="StatusBadge StatusBadge--context_info StatusBadge--variant_bold CounterBadge"
    title="-1"
  >
    <span
      class="StatusBadge__text"
    >
      -1
    </span>
    <svg
      class="StatusBadge__icon"
      data-testid="arrow-downward"
      fill="currentColor"
      viewBox="0 0 24 24"
    />
  </div>
</div>
`;

exports[`CounterBadge should render with upward icon 1`] = `
<div>
  <div
    class="StatusBadge StatusBadge--context_info StatusBadge--variant_bold CounterBadge"
    title="+1"
  >
    <span
      class="StatusBadge__text"
    >
      +1
    </span>
    <svg
      class="StatusBadge__icon"
      data-testid="arrow-upward"
      fill="currentColor"
      viewBox="0 0 24 24"
    />
  </div>
</div>
`;
